[dev]: add tmux note;

--- a/009_soft_install_note/gvim_install_note.tex
+++ b/009_soft_install_note/gvim_install_note.tex
@@ -4,6 +4,7 @@
 \subsection{GVIM安装}
 \begin{itemize}
 \item GVIM安装包链接：\url{https://pan.baidu.com/s/1PcF6-taEaOIg66kbnm6EPA}，提取码：66u3。
+\item 2020年9月26日版本 \url{https://pan.baidu.com/s/1dzBKE2d2CLscYkzqbdoO1A}，提取码：lbb1
 \item 解压压缩包到任意目录。
 \item 运行\emphasizebox{install.exe}
 \begin{messagebox}
