--- a/git.tex
+++ b/git.tex
@@ -82,6 +82,7 @@
 \input{008_system_work_note/system_work_note}
 \input{009_soft_install_note/soft_install_note}
 \input{010_voa_article/voa_article}
+\input{011_linux_note/linux_note.tex}
 
 
 \end{document}
