[dev]: add svn, keyboard note;

--- a/004_vim_note/vim_note.tex
+++ b/004_vim_note/vim_note.tex
@@ -68,4 +68,23 @@ vmap // <leader>ci
 set clipboard=unnamed
 \end{messagebox}
 
+\subsection{vim backspace问题}
+在xshell中配置如下：
+%\begin{figure}[ht]
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{vim_backspace1.jpg} %下划线不用斜杠
+%\caption{建立项目}
+\label{fig:createproject}
+\end{figure}
+
+%\begin{figure}[ht]
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{vim_backspace2.jpg} %下划线不用斜杠
+%\caption{建立项目}
+\label{fig:createproject}
+\end{figure}
+
+
 \end{itemize}
