--- a/git.tex
+++ b/git.tex
@@ -61,12 +61,15 @@
 %==========================================
 \graphicspath{{figure/},
 {002_latex_note/picture/},
+{004_vim_note/picture/},
 {005_protocol_note/bt_picture/},
 {005_protocol_note/iis_picture/},
 {009_soft_install_note/gvim_install_picture/},
 {007_complier_note/picture/},
 {008_system_work_note/system_note_picture/},
 {010_voa_article/voa_picture/},
+{013_svn_note/svn_picture/},
+{014_keyboard_note/keyboard_picture/},
 }
 
 %==========================================
@@ -83,6 +86,9 @@
 \input{009_soft_install_note/soft_install_note}
 \input{010_voa_article/voa_article}
 \input{011_linux_note/linux_note.tex}
+\input{012_python_note/python_note.tex}
+\input{013_svn_note/svn_note.tex}
+\input{014_keyboard_note/keyboard_note.tex}
 
 
 \end{document}
