[dev]: add speedpan, uml, svn note;

--- a/009_soft_install_note/soft_install_note.tex
+++ b/009_soft_install_note/soft_install_note.tex
@@ -1,3 +1,5 @@
 \section{软件安装总结}
 \input{009_soft_install_note/gvim_install_note}
+\input{009_soft_install_note/speedpan_install_note.tex}
+\input{009_soft_install_note/uml_install_note.tex}
 
