[dev]: add git commplier soft install charpter;

--- a/009_soft_install_note/soft_install_note.tex
+++ b/009_soft_install_note/soft_install_note.tex
@@ -2,4 +2,6 @@
 \input{009_soft_install_note/gvim_install_note}
 \input{009_soft_install_note/speedpan_install_note.tex}
 \input{009_soft_install_note/uml_install_note.tex}
+\input{009_soft_install_note/EdrawMax_install_note.tex}
+\input{009_soft_install_note/beyond_compare_install_note.tex}
 
