--- a/003_git_note/git_note.tex
+++ b/003_git_note/git_note.tex
@@ -307,3 +307,53 @@ main view 可以认为是主页。
 【 Q 】退出 tig。
 
 【 h 】查看快捷键帮助。
+
+\subsection{查看分支历史}
+有时候需要查看分支的创建历史, 查看分支从哪个点分出来
+\begin{commandbox}
+ >  git reflog show --date=iso origin/case/T8_pro
+\end{commandbox}
+
+\begin{messagebox}
+2ac407d refs/remotes/origin/case/T8_pro@{2021-01-20 08:50:29 +0800}: pull --rebase: fast-forward
+b89c141 refs/remotes/origin/case/T8_pro@{2021-01-19 10:25:00 +0800}: pull --rebase: fast-forward
+cc1b608 refs/remotes/origin/case/T8_pro@{2021-01-18 19:49:21 +0800}: pull --rebase: fast-forward
+dc869be refs/remotes/origin/case/T8_pro@{2021-01-12 09:15:31 +0800}: pull --rebase: fast-forward
+f252a8e refs/remotes/origin/case/T8_pro@{2021-01-08 09:04:55 +0800}: pull --rebase: fast-forward
+e818850 refs/remotes/origin/case/T8_pro@{2021-01-04 17:30:59 +0800}: pull --rebase: fast-forward
+58a7568 refs/remotes/origin/case/T8_pro@{2020-12-30 08:56:18 +0800}: pull --rebase: fast-forward
+c06741c refs/remotes/origin/case/T8_pro@{2020-12-24 14:07:14 +0800}: pull --rebase: fast-forward
+9c38ce4 refs/remotes/origin/case/T8_pro@{2020-12-15 11:00:33 +0800}: fetch origin: storing head
+\end{messagebox}
+由显示信息看到该命令只是显示本地对该分支的操作历史，只能大概定位时间点;
+
+
+\subsection{cherry-pick合并某个提交}
+使用场景: 在不同分支开发过程中，经常需要在某个分支上解决的bug合并到另外一些分支上, 这时需要将某个分支的提交合并到指定分支上去
+\begin{itemize}
+\item 把某个提交应用到当前分支上
+\begin{commandbox}
+ > git cherry-pick <commitHash>
+\end{commandbox}
+
+\item 把某个分支的最新提交应用到当前分支上
+\begin{commandbox}
+ > git cherry-pick branch-name
+\end{commandbox}
+
+\item 把多个提交应用到当前分支上
+\begin{commandbox}
+ > git cherry-pick <commitHash1> <commitHash2> <commitHash3>
+\end{commandbox}
+
+\item 把多个连续提交应用到当前分支上, commitHashBegin需要\emphasizebox{早于}commitEnd提交, 但\emphasizebox{不包含} \newline commitHashBegin的提交内容
+\begin{commandbox}
+ > git cherry-pick <commitHashBegin>..<commitHashEnd>
+\end{commandbox}
+
+\item 包含commitHashBegin的提交内容
+\begin{commandbox}
+ > git cherry-pick <commitHashBegin>^..<commitHashEnd>
+\end{commandbox}
+
+\end{itemize}
