--- a/007_complier_note/complier_note.tex
+++ b/007_complier_note/complier_note.tex
@@ -319,3 +319,30 @@ return a;
 \end{myccode}
 计算前导零的个数，即从最高位开始，连续出现的 0 的个数。如0xFFF,FFFF，执行该指令后Rd结果为4。
 
+\subsection{常用汇编语句}
+\subsubsection{读写csfr}
+\begin{myccode}
+ //打印调用函数入口
+ void log_rets_value()
+{
+    int tmp;
+    __asm__ volatile("%0 = rets" : "=r"(tmp));
+    printf("rets = 0x%x", tmp);
+}
+
+static void enable_int(void)
+{
+    int tmp;
+    __asm__ volatile("%0 = icfg" : "=r"(tmp));
+    tmp |= 1 << 8;
+    __asm__ volatile("icfg = %0" :: "=r"(tmp));
+}
+
+static void disable_int(void)
+{
+    int tmp;
+    __asm__ volatile("%0 = icfg" : "=r"(tmp));
+    tmp &= ~(1 << 8);
+    __asm__ volatile("icfg = %0" :: "=r"(tmp));
+}
+\end{myccode}
