[dev]: add voa @ 20210219;

--- a/010_voa_article/voa_article.tex
+++ b/010_voa_article/voa_article.tex
@@ -2,4 +2,5 @@
 \input{010_voa_article/001_voa_20200825}
 \input{010_voa_article/002_voa_20210104}
 \input{010_voa_article/003_voa_20210105}
+\input{010_voa_article/004_voa_20210219}
 
