--- a/009_soft_install_note/soft_install_note.tex
+++ b/009_soft_install_note/soft_install_note.tex
@@ -4,4 +4,5 @@
 \input{009_soft_install_note/uml_install_note.tex}
 \input{009_soft_install_note/EdrawMax_install_note.tex}
 \input{009_soft_install_note/beyond_compare_install_note.tex}
+\input{009_soft_install_note/ubuntu_install_note.tex}
 
