--- a/010_voa_article/voa_article.tex
+++ b/010_voa_article/voa_article.tex
@@ -3,4 +3,5 @@
 \input{010_voa_article/002_voa_20210104}
 \input{010_voa_article/003_voa_20210105}
 \input{010_voa_article/004_voa_20210219}
+\input{010_voa_article/005_voa_20210301}
 
