--- a/010_voa_article/voa_article.tex
+++ b/010_voa_article/voa_article.tex
@@ -5,5 +5,6 @@
 \input{010_voa_article/004_voa_20210219}
 \input{010_voa_article/005_voa_20210301}
 \input{010_voa_article/005_voa_20210413}
+\input{010_voa_article/006_voa_20210506}
 
 
