[dev]: add voa @20210507;

--- a/010_voa_article/voa_article.tex
+++ b/010_voa_article/voa_article.tex
@@ -6,5 +6,6 @@
 \input{010_voa_article/005_voa_20210301}
 \input{010_voa_article/005_voa_20210413}
 \input{010_voa_article/006_voa_20210506}
+\input{010_voa_article/007_voa_20210507}
 
 
